--- a/index.html
+++ b/index.html
@@ -126,6 +126,17 @@ including centralized exchanges and on-chain transfers.
 </thead>
 <tbody>
 
+
+<tr data-date="2025-12-30" data-asset="USDT" data-price="71"
+    data-source="exchange" data-platform="Bybit"
+    data-link="https://www.nodeseek.com/post-564428-1">
+<td>2025-12-30</td>
+<td class="asset usdt"><span>10</span><span class="asset-symbol">USDT</span></td>
+<td>¥71</td>
+<td class="source">交易所 · <span>Bybit</span></td>
+<td><a href="https://www.nodeseek.com/post-564428-1" target="_blank">查看</a></td>
+</tr>
+
 <tr data-date="2025-12-30" data-asset="USDC" data-price="36"
     data-source="exchange" data-tx="0xec9ea395130f820896e9f2e4cb694259e35605470d19289a80069d4bae7f75f9"
     data-link="https://www.nodeseek.com/post-563840-1">
