更新描述：比如'添加新交易记录'

--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@ including centralized exchanges and on-chain transfers.
 </thead>
 <tbody>
 
+<tr data-date="2026-01-02" data-asset="USDT" data-price="140.5"
+    data-source="exchange" data-tx="0x93b77963fa9d302245488e050337335608d20030ac618cb9f5893c2b87e5d0e7"
+    data-link="">
+<td>2026-01-02</td>
+<td class="asset usdt"><span>20.03</span><span class="asset-symbol">USDT</span></td>
+<td>¥140.5</td>
+<td class="source">链上 · <a href="https://polygonscan.com/tx/0x93b77963fa9d302245488e050337335608d20030ac618cb9f5893c2b87e5d0e7" target="_blank">Polygon</a></td>
+<td><a href="" target="_blank">老客户私信联系无链接</a></td>
+</tr>
+
+<tr data-date="2026-01-02" data-asset="USDT" data-price="70"
+    data-source="exchange" data-platform="Bybit"
+    data-link="https://www.nodeseek.com/post-567995-1">
+<td>2026-01-02</td>
+<td class="asset usdt"><span>10</span><span class="asset-symbol">USDT</span></td>
+<td>¥70</td>
+<td class="source">交易所 · <span>Bybit</span></td>
+<td><a href="https://www.nodeseek.com/post-567995-1" target="_blank">查看</a></td>
+</tr>
 
 <tr data-date="2025-12-30" data-asset="USDT" data-price="71"
     data-source="exchange" data-platform="Bybit"
