更新描述：比如'添加新交易记录'

--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@ including centralized exchanges and on-chain transfers.
 </thead>
 <tbody>
 
+<tr data-date="2026-01-03" data-asset="USDT" data-price="177.5"
+    data-source="exchange" data-tx="0x13cfb0eb7c7293ab9e13e6ecbd5625692081d20b46287ba2b247bde8708f180c"
+    data-link="">
+<td>2026-01-03</td>
+<td class="asset usdt"><span>25</span><span class="asset-symbol">USDT</span></td>
+<td>¥177.5</td>
+<td class="source">链上 · <a href="https://bscscan.com/tx/0x13cfb0eb7c7293ab9e13e6ecbd5625692081d20b46287ba2b247bde8708f180c" target="_blank">BSC</a></td>
+<td><a href="https://www.nodeseek.com/post-568881-1" target="_blank">查看</a></td>
+</tr>
+
+<tr data-date="2026-01-03" data-asset="USDT" data-price="177.5"
+    data-source="exchange" data-tx="0x237b30b4ee63aa4e580c7865e82a08edea468057f6dd23e8c7a256e3c286b218"
+    data-link="">
+<td>2026-01-03</td>
+<td class="asset usdt"><span>25</span><span class="asset-symbol">USDT</span></td>
+<td>¥177.5</td>
+<td class="source">链上 · <a href="https://bscscan.com/tx/0x237b30b4ee63aa4e580c7865e82a08edea468057f6dd23e8c7a256e3c286b218" target="_blank">BSC</a></td>
+<td><a href="https://www.nodeseek.com/post-568881-1" target="_blank">查看</a></td>
+</tr>
+
 <tr data-date="2026-01-02" data-asset="USDT" data-price="140.5"
     data-source="exchange" data-tx="0x93b77963fa9d302245488e050337335608d20030ac618cb9f5893c2b87e5d0e7"
     data-link="">
