更新描述：比如'添加新交易记录'

--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@ including centralized exchanges and on-chain transfers.
 </thead>
 <tbody>
 
+<tr data-date="2026-01-03" data-asset="USDT" data-price="196"
+    data-source="exchange" data-tx="Bybit"
+    data-link="">
+<td>2026-01-03</td>
+<td class="asset usdt"><span>28</span><span class="asset-symbol">USDT</span></td>
+<td>¥196</td>
+<td class="source">交易所 · <span>Bybit</span></td>
+<td><a href="" target="_blank">私信联系无链接</a></td>
+</tr>
+
 <tr data-date="2026-01-03" data-asset="USDT" data-price="177.5"
     data-source="exchange" data-tx="0x13cfb0eb7c7293ab9e13e6ecbd5625692081d20b46287ba2b247bde8708f180c"
     data-link="">
@@ -153,7 +163,7 @@ including centralized exchanges and on-chain transfers.
 <td class="asset usdt"><span>20.03</span><span class="asset-symbol">USDT</span></td>
 <td>¥140.5</td>
 <td class="source">链上 · <a href="https://polygonscan.com/tx/0x93b77963fa9d302245488e050337335608d20030ac618cb9f5893c2b87e5d0e7" target="_blank">Polygon</a></td>
-<td><a href="" target="_blank">老客户私信联系无链接</a></td>
+<td><a href="" target="_blank">私信联系无链接</a></td>
 </tr>
 
 <tr data-date="2026-01-02" data-asset="USDT" data-price="70"
