--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ including centralized exchanges and on-chain transfers.
 <td>2026-01-03</td>
 <td class="asset usdt"><span>25</span><span class="asset-symbol">USDT</span></td>
 <td>¥177.5</td>
-<td class="source">链上 · <a href="https://bscscan.com/tx/0x13cfb0eb7c7293ab9e13e6ecbd5625692081d20b46287ba2b247bde8708f180c" target="_blank">BSC</a></td>
+<td class="source">链上 · <a href="https://bscscan.com/tx/0x13cfb0eb7c7293ab9e13e6ecbd5625692081d20b46287ba2b247bde8708f180c" target="_blank">BSC(BEP20)</a></td>
 <td><a href="https://www.nodeseek.com/post-568881-1" target="_blank">查看</a></td>
 </tr>
 
@@ -152,7 +152,7 @@ including centralized exchanges and on-chain transfers.
 <td>2026-01-03</td>
 <td class="asset usdt"><span>25</span><span class="asset-symbol">USDT</span></td>
 <td>¥177.5</td>
-<td class="source">链上 · <a href="https://bscscan.com/tx/0x237b30b4ee63aa4e580c7865e82a08edea468057f6dd23e8c7a256e3c286b218" target="_blank">BSC</a></td>
+<td class="source">链上 · <a href="https://bscscan.com/tx/0x237b30b4ee63aa4e580c7865e82a08edea468057f6dd23e8c7a256e3c286b218" target="_blank">BSC(BEP20)</a></td>
 <td><a href="https://www.nodeseek.com/post-568881-1" target="_blank">查看</a></td>
 </tr>
 
